# predicting_fmri_response_dissimilarity_to_natural_scenes

./: README.md  biu_python_final_project.code-workspace  clip_config.py  clip_main.py  clip_utils.py  config.py  data_utils.py  main.py  predicting_fmri_response_dissimilarity_to_natural_scenes.code-workspace  pyproject.toml  pytorch_data.py  pytorch_models.py  pytorch_training.py  tox.ini  visualizations.py
.github/workflows/: block-do-not-merge.yml
config/: clip_config.py
models/: pytorch__models.py
src/project/: clip_main.py  dep2_main.py  dep_main.py  logger.py  main.py
src/project/config/: clip_config.py  config.py  dep_config.py
src/project/models/: dep_models.py  models.py  pytorch_models.py
src/project/utils/: clip_utils.py  data_utils.py  pytorch_data.py  pytorch_training.py  visualizations.py
tests/: test_clip_utils.py  test_pytorch_training.py
tests/models/: test_pytorch_models.py
tests/utils/: test_clip_utils.py  test_data_utils.py  test_pytorch_data.py  test_pytorch_training.py
utils/: clip_utils.py  pytorch_data.py  visualizations.py
